FreeBSD: Add support for FreeBSD
Change-Id: Ib21247c686cbce02d61f7db96df0230929ff7af6

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,35 +15,39 @@
 # under the License.
 
 ---
-- name: Import GPG keys
-  become: True
-  rpm_key:
-    key: '{{ item }}'
-  with_items:
-      - https://packagecloud.io/prometheus-rpm/release/gpgkey
-      - https://raw.githubusercontent.com/lest/prometheus-rpm/master/RPM-GPG-KEY-prometheus-rpm
+- name: Incluse OS-specific variables
+  include_vars: '{{ ansible_os_family  }}.yml'
 
-- name: Have the prometheus repo configured
-  become: True
-  yum_repository:
-    name: prometheus
-    description: prometheus
-    baseurl: https://packagecloud.io/prometheus-rpm/release/el/7/$basearch
-    gpgcheck: yes
-    gpgkey:
-      - https://packagecloud.io/prometheus-rpm/release/gpgkey
-      - https://raw.githubusercontent.com/lest/prometheus-rpm/master/RPM-GPG-KEY-prometheus-rpm
-
+- name: Include RPM-based repo (when necessary)
+  include_tasks: CentOS/rpm-based-repo.yml
+  when: ansible_distribution == 'CentOS'
 
 - name: Ensure node-exporter is installed
   become: True
   package:
-    name: node_exporter
-    update_cache: yes
+    name: '{{ prometheus_node_exporter_package_name }}'
+
+- name: Ensure start-up configuration is set (RedHat)
+  become: True
+  lineinfile:
+    path: /etc/default/node_exporter
+    regexp: '^NODE_EXPORTER_OPTS='
+    line: 'NODE_EXPORTER_OPTS="--{{ " --".join(prometheus_node_exporter_opts) }}"'
+  when: prometheus_node_exporter_opts is defined and ansible_os_family == 'RedHat'
+  notify: prometheus_node_exporter-restart
+
+- name: Ensure start-up configuration is set (FreeBSD)
+  become: True
+  lineinfile:
+    path: /etc/rc.conf
+    regexp: '^node_exporter_args='
+    line: 'node_exporter_args="--{{ " --".join(prometheus_node_exporter_opts) }}"'
+  when: prometheus_node_exporter_opts is defined and ansible_os_family == 'FreeBSD'
+  notify: prometheus_node_exporter-restart
 
 - name: Ensure node-exporter is started and enabled
   become: True
   service:
-    name: node_exporter
+    name: '{{ prometheus_node_exporter_service_name }}'
     state: started
     enabled: yes
