Treat every RedHat variant the same
Change-Id: I30830bfe1c18cf8fdea948a400a54e8dd0d485df

--- a/tasks/CentOS/rpm-based-repo.yml
+++ b/tasks/CentOS/rpm-based-repo.yml
@@ -15,20 +15,20 @@
 
 ---
 - name: Import GPG keys
-  become: True
+  become: true
   rpm_key:
     key: '{{ item }}'
   with_items:
-      - https://packagecloud.io/prometheus-rpm/release/gpgkey
-      - https://raw.githubusercontent.com/lest/prometheus-rpm/master/RPM-GPG-KEY-prometheus-rpm
+    - https://packagecloud.io/prometheus-rpm/release/gpgkey
+    - https://raw.githubusercontent.com/lest/prometheus-rpm/master/RPM-GPG-KEY-prometheus-rpm
 
 - name: Have the prometheus repo configured
-  become: True
+  become: true
   yum_repository:
     name: prometheus
     description: prometheus
     baseurl: https://packagecloud.io/prometheus-rpm/release/el/$releasever/$basearch
-    gpgcheck: yes
+    gpgcheck: true
     gpgkey:
       - https://packagecloud.io/prometheus-rpm/release/gpgkey
       - https://raw.githubusercontent.com/lest/prometheus-rpm/master/RPM-GPG-KEY-prometheus-rpm
