--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -16,7 +16,7 @@
 
 ---
 - name: prometheus_node_exporter-restart
-  become: True
+  become: true
   service:
     name: '{{ prometheus_node_exporter_service_name }}'
     state: restarted
